# jmtech-ecommerce-backend

./: .env  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 17744a1e4eab_initial_migration.py  b9e88a71d667_add_user_product_order_models.py
app/: initial_data.py  main.py
app/api/: api.py
app/api/v1/endpoints/: products.py
app/models/: __init__.py  item.py  order.py  product.py  user.py
app/schemas/: product.py
